WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267732
[LBSE] 'mask' / 'clipPath' (SVG) DOM changes should never trigger relayouts
https://bugs.webkit.org/show_bug.cgi?id=267732
Summary
[LBSE] 'mask' / 'clipPath' (SVG) DOM changes should never trigger relayouts
Nikolas Zimmermann
Reported
2024-01-18 14:29:23 PST
'mask' / 'clipPath' (SVG) DOM changes should never trigger relayouts. Currently changing e.g. clipPathUnits/maskUnits causes the RenderSVGResourceClipper/Masker to be marked for layout. This is unnecessary -- we should really only repaint the old & new boundaries of all elements referencing the clipPath/mask.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-01-18 14:34:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22938
EWS
Comment 2
2024-01-22 04:00:39 PST
Committed
273293@main
(26d12c80d8df): <
https://commits.webkit.org/273293@main
> Reviewed commits have been landed. Closing PR #22938 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-22 04:01:19 PST
<
rdar://problem/121366505
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug